[MSE] ArrowDataBlock: use Map.of() for empty metadata map
The LinkedIn-internal build's checkstyle (RegexpSingleline) flags the
java.util.Collections empty-map factory and asks for Map.of(); apache's
config/checkstyle.xml has no such rule, so this is only a warning upstream.
Map.of() returns the same immutable empty map and matches Pinot's modern-idiom
preference. Drop the now-unused Collections import.